--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-browser.id=Chromium
+browser.id=Chrome.INTEGRATED
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=/home/Uselinux/public_html/PhpProject1
-remote.connection=Raspberry-f42fbb
-remote.directory=/riegosolar
+copy.src.target=C:\\home\\Uselinux\\public_html\\PhpProject1
+remote.connection=Riegoberry-2e9f1f
 remote.permissions=false
 remote.upload=ON_RUN
 run.as=REMOTE
-url=http://riegoberry/riegosolar/
+script.arguments=usuario=admin&pass=UmllZ29zb2xhcjc3
+url=http://riegoberry/riegosolar/loginget.php
