Añadida login tabla usuarios. Nivel de usuarios.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ remote.connection=Riegoberry-2e9f1f
 remote.permissions=false
 remote.upload=ON_RUN
 run.as=REMOTE
-script.arguments=usuario=admin&pass=UmllZ29zb2xhcjc3
+script.arguments=usuario=lkllkjjl&pass=UmllZ29zb2xhcjc3
 url=http://riegoberry/riegosolar/loginget.php
