--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
 browser.id=Chrome.INTEGRATED
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\home\\Uselinux\\public_html\\PhpProject1
-remote.connection=Riegoberry-2e9f1f
+copy.src.target=/home/use/C:\\home\\Uselinux\\public_html\\PhpProject1
+remote.connection=missing-config
 remote.permissions=false
 remote.upload=ON_RUN
 run.as=REMOTE
 script.arguments=usuario=admin&pass=UmllZ29zb2xhcjc3
-url=http://riegoberry/riegosolar/loginget.php
+url=http://justino1.riegosolar.net/riegosolar/loginget.php
